<resources>
    <string name="app_name">AccountingSD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reminder">週期提醒</string>
    <string name="depositTarget">存款目標</string>
    <string name="cateEdit">類別編輯</string>
    <string name="account">帳戶</string>
    <string name="statistics">財務分析</string>
    <string name="record_title">花費項目</string>
    <string name="cost">花費金額</string>
    <string name="type">花費類別</string>
    <string name="create_record">新增</string>
    <string name="startDate"> 起始日期：</string>
    <string name="clothes">衣服</string>
    <string name="home_screen">回主畫面</string>
    <string name="sum">總計</string>
    <string name="title">名稱：</string>
    <string name="money">金額：</string>
    <string name="categories">類別：</string>
    <string name="setting">設定</string>
    <string name="eventTitle">標題：</string>
    <string name="eventDesc">說明：</string>
    <string name="eventAttendee">邀請對象：</string>
    <string name="eventLocation">地點：</string>
    <string name="eventStart">開始時間：</string>
    <string name="eventEnd">結束時間：</string>
    <string name="createEventStart">開始時間：</string>

    <!-- Predefined expense categories -->
    <string name="cat_food">食物</string>
    <string name="cat_dessert">甜點</string>
    <string name="cat_drink">飲料</string>
    <string name="cat_shopping">購物</string>
    <string name="cat_clothes">衣服</string>
    <string name="cat_accessories">飾品</string>
    <string name="cat_present">禮物</string>
    <string name="cat_transportation">交通</string>
    <string name="cat_chummage">房租</string>
    <string name="cat_sports">運動</string>
    <string name="cat_couple">情侶</string>
    <string name="cat_salary">薪水</string>
    <string name="cat_red_envelope">紅包</string>
    
    <string name="image_shopping">shopping.png</string>
    <string name="image_transportation">交通.png</string>
    <string name="image_credit_card">信用卡.png</string>
    <string name="image_pet">寵物.png</string>
    <string name="image_save">小豬撲滿.png</string>
    <string name="image_couple">情侶.png</string>
    <string name="image_cummage">房租.png</string>
    <string name="image_dessert">甜點.png</string>
    <string name="image_red_envelope">紅包.png</string>
    <string name="image_mackups">美妝.png</string>
    <string name="image_salary">薪水.png</string>
    <string name="image_clothe">衣2.png</string>
    <string name="image_transfer">轉帳.png</string>
    <string name="image_cellphone">電話.png</string>
    <string name="image_food">食物2.png</string>
    <string name="image_drink">飲料.png</string>
    <string name="image_accessories">飾品.png</string>
    <string name="createEventAttendee">參與對象</string>
    <string name="createEventLocation">地點</string>
    <string name="createEventDesc">說明</string>
    <string name="createEventTitle">標題</string>
    <string name="createEventEnd">結束時間</string>
</resources>
