<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newRecord.addNewRecordActivity"
    android:background="@drawable/pure_sky">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:textSize="30dp"/>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/record_title"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/etMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cost"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/type"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btCreateRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_record" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>