<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#89bcd4"
                    android:padding="10dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/createEventTitle" />

                    <EditText
                        android:id="@+id/eventTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#dce2e6"
                    android:padding="10dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/createEventDesc" />

                    <EditText
                        android:id="@+id/eventDes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#89bcd4"
                    android:padding="10dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/createEventLocation" />

                    <EditText
                        android:id="@+id/eventLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#dce2e6"
                    android:padding="10dp"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/createEventAttendee" />

                    <EditText
                        android:id="@+id/eventAttendee"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:hint="Place more attendee by comma seprated"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"

                        android:lines="1"

                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#89bcd4"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/startAt"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/createEventStart" />

                    <LinearLayout
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:orientation="vertical">

                        <DatePicker
                            android:id="@+id/startDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:calendarViewShown="false"

                            android:datePickerMode="spinner" />

                        <TimePicker
                            android:id="@+id/startTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:timePickerMode="spinner" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#dce2e6"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/endAt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/createEventEnd" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:orientation="vertical">

                        <DatePicker
                            android:id="@+id/endDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:calendarViewShown="false"
                            android:datePickerMode="spinner" />

                        <TimePicker
                            android:id="@+id/endTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:timePickerMode="spinner" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#89bcd4"
                    android:padding="10dp"
                    android:weightSum="10">

                    <Button
                        android:id="@+id/createEvent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:maxLines="1"
                        android:text="Create Event" />

                    <Button
                        android:id="@+id/cancelEvent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="Cancel" />

                </LinearLayout>
            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>